[package]
name = "winternitz"
version = "0.1.0"
edition = "2024"
authors = ["Vladimir Leshkevich <echostacc@pm.me>"]
description = "A quantum-resistant Winternitz One-Time Signature (WOTS) implementation in Rust"
repository = "https://github.com/echostacc/winternitz"
license = "MIT"
keywords = ["cryptography", "post-quantum", "signature", "winternitz", "hash-based"]
categories = ["cryptography", "algorithms"]
readme = "README.md"

[dependencies]
hex = "0.4.3"
rand = "0.8.5"
sha2 = "0.10.8"
